--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -343,6 +343,10 @@ color: #4D566B;
     margin-left: 10%;
 }
 
+.ml-25 {
+    margin-left: 25px;
+}
+
 /******************************************* END MARGIN ******************************************************/
 
 /********************************************** WIDTH ********************************************************/
@@ -423,6 +427,11 @@ li {
 /******************************************* END LIST ******************************************************/
 
 /******************************************** GRID *********************************************************/
+
+.grid-two-cols {  /* one col if width < 480px */
+    display: grid;
+    grid-template-columns: auto auto;
+}
 
 .grid-container-2-cols {
   display: grid;
