--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -45,6 +45,21 @@
     <script>
       var _paq = window._paq = window._paq || [];
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+
+      _paq.push(['requireConsent']);
+      // OR require user cookie consent before storing and using any cookies
+      _paq.push(['requireCookieConsent']);
+
+      // remember tracking consent was given for all subsequent page views and visits
+      _paq.push(['rememberConsentGiven']);
+      // OR remember cookie consent was given for all subsequent page views and visits
+      _paq.push(['rememberCookieConsentGiven']);
+
+      // revoke tracking consent
+_paq.push(['forgetConsentGiven']);
+// OR revoke cookie consent
+_paq.push(['forgetCookieConsentGiven']);
+
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
