--- a/platform_code/assessment/static/css/media.css
+++ b/platform_code/assessment/static/css/media.css
@@ -298,7 +298,7 @@ Inside each section, first you have, if it exists:
         margin-left: 0px;
     }
     .h1-margin-breadcrumbs{
-        margin-bottom: 30px;
+        margin-bottom: 100px;
         margin-top: 30px;
     }
     .question-name {
@@ -362,6 +362,16 @@ Inside each section, first you have, if it exists:
     }
     .cke_dialog_contents {
         width: 95vw !important;
+    }
+    .cookie-buttons {
+        text-align: center;
+    }
+    .cookie-buttons > button:first-child {
+        margin-bottom: 10px;
+        margin-right: 0px!important;
+    }
+    .cookie-buttons > button {
+        width: 150px
     }
 
 }
