Make translation and allow removing cookies

--- a/platform_code/templates/cookie-banner.html
+++ b/platform_code/templates/cookie-banner.html
@@ -28,6 +28,8 @@ function setAcceptCookie(value) {
   document.getElementById("cookie-banner").classList.add("display-none")
   if (value) {
     _paq.push(['setConsentGiven']);
+  } else {
+    _paq.push(['forgetConsentGiven']);
   }
 }
 
