Improve cookies text

--- a/platform_code/home/templates/home/profile-settings.html
+++ b/platform_code/home/templates/home/profile-settings.html
@@ -34,7 +34,7 @@
                     <a class="nav-link profile-column" data-toggle="pill" href="#content-export"
                        name="column-button"
                        onclick="displayTextLink('{% trans 'Data export' %}', 'active-profile-settings')">
-                        {% trans "Export personnal data" %}
+                        {% trans "Personnal data" %}
                     </a>
                 </li>
 
