--- a/platform_code/templates/cookie-banner.html
+++ b/platform_code/templates/cookie-banner.html
@@ -5,7 +5,7 @@
 
 <div class="cookie-banner display-none" id="cookie-banner">
   <div class="cookie-content">
-    {% trans "This website stores cookies to enable site functionality including analytics." %}
+    {% trans "This website stores cookies to analyze the use of the site and improve its ergonomics." %}
     <div class="cookie-buttons">
       <button type="button" class="btn btn-outline-light mr-3" id="denyCookieBtn" onclick="setAcceptCookie(false)">
         {% trans "Decline" %}
