--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -1,38 +1,16 @@
-{% extends 'base-evaluation.html' %}
 {% load static %}
 {% load assessment_tags %}
 {% load i18n %}
 
-{% block content %}
-<head>
-    <title>{% trans 'Labelia assessment: Connection' %}</title>
-    <meta name="description"
-          content="{% blocktrans trimmed %}
-           Connect to your labelia account to create new evaluations, browse technical resources, consult
-           the score of your completed evaluations, and more.
-          {% endblocktrans %}"
-    />
-</head>
-
-<div class="login container form-center">
+<div class="login form-center">
     <!--    I don't know why it is not working -> TODO but manage by messages-->
     {% if login_form.errors %}
     <p>{% trans "Your email and password didn't match. Please try again." %}</p>
     {% endif %}
 
-    {% if next %}
-    {% if user.is_authenticated %}
-    <p>{% trans "Your account doesn't have access to this page. To proceed,
-        please login with an account that has access." %}</p>
-    {% else %}
-    <p>{% trans "Please login to see this page." %}</p>
-    {% endif %}
-    {% endif %}
-
-
-    <form class="form" id="user_login_page_form" method='post' role="form">
+    <form class="form" id="user_login_page_form" method='post' role="form" action="{% url 'home:homepage' %}">
         <div class="header">
-            <h1 class="title h1-margin-no-breadcrumbs">{% trans "Login" %}</h1>
+            <h1 class="title h1-homepage">{% trans "Login" %}</h1>
 
         </div>
         {% if message %}
@@ -42,35 +20,36 @@
         </div>
 
         {% endif %}
-        <div class="body margin-50 ">
+        <div class="body">
             {% csrf_token %}
             <div class="margin-auto">
                 <div>
-                    <div class="tablet-min-screen-field-margin-10">{{ login_form.username.label_tag }}</div>
+                    <div class="">{{ login_form.username.label_tag }}</div>
                 </div>
                 <div>
-                    <div class="tablet-min-screen-field-margin-10">{{ login_form.username }}</div>
+                    <div class="">{{ login_form.username }}</div>
                 </div>
                 <div>
-                    <div class="tablet-min-screen-field-margin-10">{{ login_form.password.label_tag }}</div>
+                    <div class="margin-20">{{ login_form.password.label_tag }}</div>
 
                 </div>
                 <div>
-                    <div class="tablet-min-screen-field-margin-10">{{ login_form.password }}</div>
+                    <div class="">{{ login_form.password }}</div>
                 </div>
             </div>
 
         </div>
-        <div class="margin-50 row one-column">
+        {% if message_login %}
+
+        <div class="alert {{message_login|get_key_by_position:0}} margin-30">
+            {{message_login|get_value_by_position:0}}
+        </div>
+        {% endif %}
+        <div class="margin-40 row one-column">
             <div class="column">
                 <div>
-                    <input class="btn btn-primary adapted-button-size-250 margin-auto" type="submit"
+                    <input class="btn btn-primary adapted-button-size-250 margin-auto" type="submit" name="action" value="login"
                            value="{% trans 'Validate' %}"/>
-                </div>
-                <div class="margin-10">
-                    <input name="next" type="hidden" value="{{ next }}"/>
-                    <a class="btn btn-blue adapted-button-size-250" href="{% url 'home:signup' %}"
-                       >{% trans "I haven't an account" %}</a>
                 </div>
             </div>
 
@@ -81,5 +60,3 @@
         <a href="{% url 'home:password_reset' %}">{% trans "Forgotten password?" %}</a>
     </div>
 </div>
-
-{% endblock content %}
