--- a/platform_code/templates/footer.html
+++ b/platform_code/templates/footer.html
@@ -7,65 +7,43 @@
 {% get_available_languages as LANGUAGES %}
 {% get_language_info_list for LANGUAGES as languages %}
 
-<div class="larger-small-screen-absolute-position white-color partnership-footer">
-    <p class="margin-auto center text-partnership">{% trans "With the support of " %}
-    <a href="https://dataforgood.fr/"
-       title="https://dataforgood.fr/"
-       class="link-with-border"
-       target="_blank">Data for Good.</a>
-    </p>
-    <a href="https://dataforgood.fr/"
-       title="https://dataforgood.fr/"
-       target="_blank">
-        <img alt="Data for Good logo"
-         class="img-fluid d-block mx-auto logo-d4g margin-10 circle"
-         src="{% static 'image/logo-d4g.png' %}">
-    </a>
-    <p><strong>DATA FOR GOOD</strong></p>
-</div>
-<div class="col-md-3 col-md-3-footer">
-    {% if user.is_authenticated %}
-    <a class="link-with-border" href="{% url 'home:logout' %}">{% trans "Logout" %}</a>
-    {% else %}
-    <a class="link-with-border" href="{% url 'home:signup' %}">{% trans "Sign up" %}</a><br>
-    <a class="link-with-border" href="{% url 'home:login' %}">{% trans "Login" %}</a>
-    {% endif %}
-</div>
-<div class="col-md-3 col-md-3-footer">
-    <a class="link-with-border" href="{% url 'home:faq' %}">{% trans "FAQ" %}</a>
-</div>
-<div class="col-md-3 col-md-3-footer">
-    <a class="link-with-border" href="{% url 'home:release-notes' %}">{% trans "Release Notes" %}</a>
-</div>
-<div class="col-md-3 col-md-3-footer">
-    {% if platform_management.activate_multi_languages %}
-        <form action="{% url 'set_language' %}" method="post">
-            {% csrf_token %}
-            <input name="next" type="hidden" value="{{ redirect_to }}" />
-            <div class="nav navbar-nav navbar-right language menu">
 
-                {% for language in languages %}
-                    {% if language.code != LANGUAGE_CODE %}
-
-                    {# Trans: the language is voluntarily inverted #}
-                    <button type="submit" name="language" value="{{ language.code }}" class="btn button-language-footer self-center">
-                        {% trans "Passer en version française" %}
-                    </button>
-                {% endif %}
-                {% endfor %}
+<div>
+    {% if footer_list %}
+    <span class="white-color">{% trans 'With the support of:' %}</span>
+    <div class="center logo-footer">
+        {% for footer_instance in footer_list %}
+            <div class="margin-logo">
+                <a href="{{ footer_instance.link }}"
+                title="{{ footer_instance.link }}"
+                target="_blank">
+                    <img alt="{{ footer_instance.name }}"
+                    class="img-fluid d-block mx-auto logo-d4g margin-10 circle"
+                    src="{{ footer_instance.logo.url }}">
+                </a>
+                <a href="{{ footer_instance.link }}"
+                title="{{ footer_instance.link }}"
+                class="link-without-border"
+                target="_blank">{{ footer_instance.name }}</a>
             </div>
-        </form>
+        {% endfor %}
+    </div>
+    <div class="footer-separator"></div>
     {% endif %}
-</div>
-<div class="col-md-3 col-md-3-footer">
-    <a class="link-with-border" href="{% url 'home:legal-notices' %}">{% trans "Legal notices" %}</a>
-</div>
-<div class="col-md-3 col-md-3-footer">
-    <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/LabeliaLabs" target="_blank"></a>
-    <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/labelialabs/"
-        target="_blank"></a>
-    <a class="fa fa-icon-footer fa-github" href="https://github.com/LabeliaLabs" target="_blank"></a>
-    <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@labelia.org" target="_blank"></a>
-    <a class="fa fa-icon-footer fa-meetup" href="https://www.meetup.com/data-science-responsable-et-de-confiance/" target="_blank"></a>
-</div>
+    <div class="links-footer">
+        <a class="link-with-border" href="{% url 'home:homepage' %}">{% trans "Homepage" %}</a><br>
+        <a class="link-with-border" target="_blank" href="https://www.labelia.org/fr/faq-plateforme">{% trans "FAQ" %}</a>
+        <a class="link-with-border" target="_blank" href="https://www.labelia.org/fr/mentions-legales">{% trans "Legal notices" %}</a>
+        <a class="link-with-border" href="{% url 'home:release-notes' %}">{% trans "Releases" %}</a>
+
+    </div>
+    <div class="col-md-3 col-md-3-footer">
+        <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/LabeliaLabs" target="_blank"></a>
+        <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/labelialabs/"
+            target="_blank"></a>
+        <a class="fa fa-icon-footer fa-github" href="https://github.com/LabeliaLabs" target="_blank"></a>
+        <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@labelia.org" target="_blank"></a>
+        <a class="fa fa-icon-footer fa-meetup" href="https://www.meetup.com/data-science-responsable-et-de-confiance/" target="_blank"></a>
+    </div>
+
 </div>
