--- a/platform_code/assessment/static/css/media.css
+++ b/platform_code/assessment/static/css/media.css
@@ -371,6 +371,8 @@ Inside each section, first you have, if it exists:
     }
     .grid-homepage {
         display: block;
+        margin-right: 0%;
+        margin-left: 0%;
     }
 
 }
@@ -384,9 +386,6 @@ Inside each section, first you have, if it exists:
     }
     .tablet-min-screen-field-margin-10{
         margin-top: 10px;
-    }
-    .tablet-min-screen-buttons-signup{
-        width: 60%;
     }
     .float-left-larger-tablet{
         float: left;
