--- a/platform_code/home/templates/home/signup.html
+++ b/platform_code/home/templates/home/signup.html
@@ -2,43 +2,37 @@
 {% load static %}
 
 <h1 class="h1-homepage">{% trans "Sign up" %}</h1>
-<div class="">
-    <div class="">
-        <form id="signup" method="post">
-            {% csrf_token %}
-            {% for field in signup_form %}
-                <div class="">
-                    {{ field.label_tag }}
-                </div>
-                <div class="signup-field-tablet-min-screen">
-                    <div class=" form-input">
-                        <p>{{ field }}</p>
-                    </div>
-                    {% if forloop.counter == 4 %}
-                    <div class="help-tip help-tip-right remove-smartphone-screen">
-                        <p>{% blocktrans trimmed %}
-                            Your password must contain at least 8 characters, with at least one number and one letter
-                            {% endblocktrans %}
-                        </p>
-                    </div>
-                    {% endif %}
+<form id="signup" method="post" class="width-350">
+    {% csrf_token %}
+    {% for field in signup_form %}
+        <div class="">
+            {{ field.label_tag }}
+        </div>
+        <div class="signup-field-tablet-min-screen">
+            <div class=" form-input">
+                <p>{{ field }}</p>
+            </div>
+            {% if forloop.counter == 4 %}
+            <div class="help-tip help-tip-right remove-smartphone-screen">
+                <p>{% blocktrans trimmed %}
+                    Your password must contain at least 8 characters, with at least one number and one letter
+                    {% endblocktrans %}
+                </p>
+            </div>
+            {% endif %}
 
-                </div>
-                <div class="">
-                    {% for error in field.errors %}
-                    <p class="red-color margin-10">{{ error }}</p>
-                    {% endfor %}
-                </div>
+        </div>
+        <div class="">
+            {% for error in field.errors %}
+            <p class="red-color margin-10">{{ error }}</p>
             {% endfor %}
-            <div class="tablet-min-screen-buttons-signup">
-                <div class="center">
-                    <button class="btn btn-primary margin-bot-top-20"
-                            name="action" value="signup"
-                            type="submit">{% trans "Sign up" %}
-                    </button>
-                </div>
-                </div>
-        </form>
-
+        </div>
+    {% endfor %}
+    <div class="center">
+        <button class="btn btn-primary margin-bot-top-20 adapted-button-size-250"
+                name="action" value="signup"
+                type="submit">{% trans "Sign up" %}
+        </button>
     </div>
-</div>
+</form>
+
