--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="center">
-        <div id="image">
+        <div id="image" style="max-width: 500px; margin-top: 200px;">
             <img alt="logo labelia" src="{% static 'image/Logo_Labelia_horizontal_BL_RVB.png' %}" title="logo labelia">
         </div>
         <div id="text">
