Feat/admin improvements

--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -24,8 +24,13 @@
 
 <body>
     <div class="center">
-        <div id="image" style="max-width: 500px; margin-top: 200px;">
-            <img alt="logo labelia" src="{% static 'image/Logo_Labelia_horizontal_BL_RVB.png' %}" title="logo labelia">
+        <div id="image" >
+            <img 
+                alt="logo labelia" 
+                src="{% static 'image/Logo_Labelia_horizontal_BL_RVB.png' %}" 
+                title="logo labelia"
+                style="max-width: 500px; margin-top: 200px;"
+            >
         </div>
         <div id="text">
             <h1>{{title}}</h1>
